--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.1"
